Fix header background for dark mode and light mode

--- a/src/components/ServerList.css
+++ b/src/components/ServerList.css
@@ -1,6 +1,7 @@
 .server-list-container {
   margin-top: 32px;
   padding: 0;
+  background: transparent
 }
 
 .server-list-container > ion-text {
